1.1.1 Release Candidate (#6)
* Upgraded to Angular 21 and Vitest
* Feat: timeline markers for easier tracking of time in the main view
* Cosmetics and bugfixes